--- a/wildcatweb/src/features/commandPanel/dashboards/motor/styles/DashMotorAnimation.module.css
+++ b/wildcatweb/src/features/commandPanel/dashboards/motor/styles/DashMotorAnimation.module.css
@@ -11,6 +11,7 @@
     height: 100%;
     border-radius: 50%;
     background-color: var(--color-background);
+    border:  var(--border-width-extra) solid var(--color-background);
     overflow: hidden;
 }
 
